Add ui beautification of profile page

--- a/SimpleApp/Base.lproj/Main.storyboard
+++ b/SimpleApp/Base.lproj/Main.storyboard
@@ -864,24 +864,40 @@
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xbh-3W-Pgj">
                                 <rect key="frame" x="16" y="198" width="568" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="31H-NX-b56"/>
+                                    <constraint firstAttribute="width" constant="568" id="B1r-d4-eBa"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qsy-2o-BBh">
-                                <rect key="frame" x="16" y="251" width="568" height="21"/>
+                                <rect key="frame" x="16" y="281" width="568" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="5su-tv-jko"/>
+                                    <constraint firstAttribute="width" constant="568" id="b29-Vx-fmt"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Requested" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EOC-Nj-WaP">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Requested" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EOC-Nj-WaP">
                                 <rect key="frame" x="16" y="169" width="568" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="4Xv-cN-KPI"/>
+                                    <constraint firstAttribute="width" constant="568" id="8qd-aa-1W3"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Accepted" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JTE-Nq-XME">
-                                <rect key="frame" x="16" y="227" width="568" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Accepted" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JTE-Nq-XME">
+                                <rect key="frame" x="16" y="257" width="568" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="568" id="h0j-47-LFO"/>
+                                    <constraint firstAttribute="height" constant="21" id="qlT-RV-spA"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
@@ -889,20 +905,24 @@
                         </subviews>
                         <color key="backgroundColor" red="0.17254901959999999" green="0.24313725489999999" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="Qsy-2o-BBh" firstAttribute="trailing" secondItem="xbh-3W-Pgj" secondAttribute="trailing" id="2rx-as-4GO"/>
-                            <constraint firstItem="scF-9c-kfX" firstAttribute="top" secondItem="xbh-3W-Pgj" secondAttribute="bottom" constant="76" id="FEq-Nx-fLn"/>
-                            <constraint firstItem="scF-9c-kfX" firstAttribute="top" secondItem="Qsy-2o-BBh" secondAttribute="bottom" constant="23" id="H7R-ZV-1md"/>
+                            <constraint firstAttribute="centerX" secondItem="EOC-Nj-WaP" secondAttribute="centerX" id="0zR-wS-ptu"/>
+                            <constraint firstAttribute="centerX" secondItem="xbh-3W-Pgj" secondAttribute="centerX" id="Eo0-Ta-rF0"/>
                             <constraint firstAttribute="centerX" secondItem="scF-9c-kfX" secondAttribute="centerX" id="HhO-OR-zRl"/>
-                            <constraint firstAttribute="centerX" secondItem="xbh-3W-Pgj" secondAttribute="centerX" id="PRk-bn-W6v"/>
                             <constraint firstAttribute="centerX" secondItem="HIN-aa-AyS" secondAttribute="centerX" id="QlN-YS-VcB"/>
-                            <constraint firstItem="xbh-3W-Pgj" firstAttribute="top" secondItem="HIN-aa-AyS" secondAttribute="bottom" constant="30" id="aaP-dH-mzx"/>
+                            <constraint firstItem="EOC-Nj-WaP" firstAttribute="trailing" secondItem="JTE-Nq-XME" secondAttribute="trailing" id="ZqG-gR-aDh"/>
+                            <constraint firstItem="JTE-Nq-XME" firstAttribute="top" secondItem="xbh-3W-Pgj" secondAttribute="bottom" constant="38" id="drV-6l-dco"/>
                             <constraint firstItem="s7P-30-puK" firstAttribute="top" secondItem="FSq-yQ-7Ov" secondAttribute="bottom" constant="8" id="hDb-rD-mKH"/>
-                            <constraint firstItem="xbh-3W-Pgj" firstAttribute="leading" secondItem="86W-Dk-58D" secondAttribute="leadingMargin" id="mRG-4c-5IU"/>
+                            <constraint firstItem="Qsy-2o-BBh" firstAttribute="top" secondItem="JTE-Nq-XME" secondAttribute="bottom" constant="3" id="hfc-mq-gbb"/>
                             <constraint firstItem="FSq-yQ-7Ov" firstAttribute="top" secondItem="scF-9c-kfX" secondAttribute="bottom" constant="8" id="mV8-Aw-DY7"/>
                             <constraint firstItem="HIN-aa-AyS" firstAttribute="top" secondItem="hBj-A6-S0A" secondAttribute="bottom" constant="44" id="mgq-Dv-m5W"/>
+                            <constraint firstItem="EOC-Nj-WaP" firstAttribute="leading" secondItem="JTE-Nq-XME" secondAttribute="leading" id="oZX-7O-heD"/>
                             <constraint firstAttribute="centerX" secondItem="FSq-yQ-7Ov" secondAttribute="centerX" id="pW3-58-kaN"/>
-                            <constraint firstItem="Qsy-2o-BBh" firstAttribute="leading" secondItem="xbh-3W-Pgj" secondAttribute="leading" id="rkx-q0-QTr"/>
-                            <constraint firstItem="Qsy-2o-BBh" firstAttribute="top" secondItem="xbh-3W-Pgj" secondAttribute="bottom" constant="32" id="uya-bn-hIA"/>
+                            <constraint firstItem="EOC-Nj-WaP" firstAttribute="top" secondItem="HIN-aa-AyS" secondAttribute="bottom" constant="1" id="qrB-9A-bao"/>
+                            <constraint firstItem="Qsy-2o-BBh" firstAttribute="top" secondItem="JTE-Nq-XME" secondAttribute="bottom" constant="3" id="sgR-NV-jtH"/>
+                            <constraint firstAttribute="centerX" secondItem="Qsy-2o-BBh" secondAttribute="centerX" id="teg-7Z-zCI"/>
+                            <constraint firstItem="Qsy-2o-BBh" firstAttribute="top" secondItem="JTE-Nq-XME" secondAttribute="bottom" constant="3" id="wlO-9G-kL2"/>
+                            <constraint firstAttribute="centerX" secondItem="JTE-Nq-XME" secondAttribute="centerX" id="xay-y6-eCY"/>
+                            <constraint firstItem="xbh-3W-Pgj" firstAttribute="top" secondItem="EOC-Nj-WaP" secondAttribute="bottom" constant="8" id="zRk-0W-drp"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Profile" id="5k3-FY-gnA"/>
