Move tabs and rename

--- a/SimpleApp/Base.lproj/Main.storyboard
+++ b/SimpleApp/Base.lproj/Main.storyboard
@@ -815,7 +815,7 @@
         <!--Profile-->
         <scene sceneID="HzE-dX-Fla">
             <objects>
-                <viewController id="pZh-sY-qgU" customClass="ProfileViewController" customModule="Wanna_Help" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Profile" id="pZh-sY-qgU" customClass="ProfileViewController" customModule="Wanna_Help" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="hBj-A6-S0A"/>
                         <viewControllerLayoutGuide type="bottom" id="s7P-30-puK"/>
@@ -1139,9 +1139,9 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="XeQ-0J-Fby" kind="relationship" relationship="viewControllers" id="Bbd-eI-nBl"/>
-                        <segue destination="uVc-qV-5XT" kind="relationship" relationship="viewControllers" id="cts-Og-6g0"/>
                         <segue destination="JdN-7q-oL3" kind="relationship" relationship="viewControllers" id="qpX-H0-EZH"/>
+                        <segue destination="uVc-qV-5XT" kind="relationship" relationship="viewControllers" id="cts-Og-6g0"/>
+                        <segue destination="XeQ-0J-Fby" kind="relationship" relationship="viewControllers" id="Bbd-eI-nBl"/>
                         <segue destination="jvV-aH-ANQ" kind="relationship" relationship="viewControllers" id="9we-Er-sMR"/>
                     </connections>
                 </tabBarController>
@@ -1149,11 +1149,11 @@
             </objects>
             <point key="canvasLocation" x="1191" y="317"/>
         </scene>
-        <!--Home-->
+        <!--Offer-->
         <scene sceneID="RO1-Gd-mc6">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="XeQ-0J-Fby" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Home" id="5v8-j9-A7v"/>
+                    <tabBarItem key="tabBarItem" title="Offer" id="5v8-j9-A7v"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Lxk-ei-31y">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -1173,11 +1173,11 @@
             </objects>
             <point key="canvasLocation" x="1947" y="-371"/>
         </scene>
-        <!--Request-->
+        <!--Get-->
         <scene sceneID="5i9-rZ-8aA">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="uVc-qV-5XT" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Request" id="F9Z-87-BLD"/>
+                    <tabBarItem key="tabBarItem" title="Get" id="F9Z-87-BLD"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="kVi-H7-H8F">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -1197,11 +1197,11 @@
             </objects>
             <point key="canvasLocation" x="1947" y="317"/>
         </scene>
-        <!--Profile-->
+        <!--Me-->
         <scene sceneID="2iP-fb-ynn">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="JdN-7q-oL3" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Profile" id="L4n-Aa-qdm"/>
+                    <tabBarItem key="tabBarItem" title="Me" id="L4n-Aa-qdm"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="uLW-v4-d82">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
