--- a/SimpleApp/Base.lproj/Main.storyboard
+++ b/SimpleApp/Base.lproj/Main.storyboard
@@ -822,19 +822,45 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Tn-FV-JC1">
-                                <rect key="frame" x="129" y="316" width="125" height="40"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Tn-FV-JC1">
+                                <rect key="frame" x="135" y="316" width="125" height="40"/>
                                 <color key="backgroundColor" red="0.18039215689999999" green="0.80000000000000004" blue="0.4431372549" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="kym-Sl-ncB"/>
+                                    <constraint firstAttribute="width" constant="125" id="zgf-2J-zhB"/>
+                                </constraints>
                                 <state key="normal" title="Recieved">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f3f-W7-f4I">
-                                <rect key="frame" x="326" y="316" width="125" height="40"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Did you recieve help?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JKi-t5-FXy">
+                                <rect key="frame" x="165" y="150" width="270" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="270" id="ZVi-dT-yky"/>
+                                    <constraint firstAttribute="height" constant="60" id="zMU-5m-crU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RGU-vx-ROp">
+                                <rect key="frame" x="279" y="325" width="42" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="Kft-wN-piU"/>
+                                    <constraint firstAttribute="width" constant="42" id="WQV-Vf-tNd"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f3f-W7-f4I">
+                                <rect key="frame" x="340" y="316" width="125" height="40"/>
                                 <color key="backgroundColor" red="0.75294117650000003" green="0.22352941179999999" blue="0.16862745100000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Hpv-Pj-pca"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="125" id="K6p-xe-Z6l"/>
+                                    <constraint firstAttribute="width" constant="125" id="zXK-TB-UAy"/>
                                 </constraints>
                                 <state key="normal" title="Didn't Recieve">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -847,7 +873,17 @@
                                 </variation>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.17254901959999999" green="0.24313725489999999" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="f3f-W7-f4I" firstAttribute="leading" secondItem="RGU-vx-ROp" secondAttribute="trailing" constant="19" id="FSe-Di-JXR"/>
+                            <constraint firstAttribute="centerX" secondItem="RGU-vx-ROp" secondAttribute="centerX" id="MGW-Pa-laX"/>
+                            <constraint firstAttribute="centerY" secondItem="f3f-W7-f4I" secondAttribute="centerY" constant="-36" id="ex4-9E-VnC"/>
+                            <constraint firstItem="RGU-vx-ROp" firstAttribute="top" secondItem="JKi-t5-FXy" secondAttribute="bottom" constant="115" id="jH2-kS-hqz"/>
+                            <constraint firstAttribute="centerY" secondItem="0Tn-FV-JC1" secondAttribute="centerY" constant="-36" id="kcc-0G-f3E"/>
+                            <constraint firstItem="RGU-vx-ROp" firstAttribute="leading" secondItem="0Tn-FV-JC1" secondAttribute="trailing" constant="19" id="luf-nj-NcD"/>
+                            <constraint firstAttribute="centerX" secondItem="JKi-t5-FXy" secondAttribute="centerX" id="tcx-Zs-Saf"/>
+                            <constraint firstItem="JKi-t5-FXy" firstAttribute="top" secondItem="WMQ-9r-IIZ" secondAttribute="bottom" constant="86" id="zpR-db-IWy"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gZn-ct-hdY" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1017,7 +1053,7 @@
                             </mask>
                         </variation>
                     </view>
-                    <navigationItem key="navigationItem" title="Profile" id="5k3-FY-gnA"/>
+                    <navigationItem key="navigationItem" title="Me" id="5k3-FY-gnA"/>
                     <connections>
                         <outlet property="acceptedLabel" destination="Qsy-2o-BBh" id="wHM-kx-Tdl"/>
                         <outlet property="closeRequestButton" destination="SRO-eg-1m2" id="2Ye-hv-Ba3"/>
